css/index.css
/* ... */
main .services div.container .all-services-small .card-small h3{
    width:12em;
    font-family: 'Atami';
    font-weight: bold;
    color:var(--sec-color);
    font-size:.8em;
    letter-spacing: 1.5px;
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}
main .show-service{
  display: block;
  background-color: black;
  height: auto;
}

article{
  display: none;
}
.article{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  color: var(--sec-color);
  height: auto;
}
.article-head-container{
  min-height: 100vh;
  width: 100%;
  display: flex;
  background-image: url('../images/montain.png');
  background-color: #141414;
  background-size: cover;
  background-position: center;
  height: auto;
}
.article-head-container div.container{
  display: flex;

}
.article-head{
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  height: 100%;

}
.article-head h2{
  margin-bottom: 7%;
  font-size: 2em;
}
.article-head p{
  font-size: 1.2em;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
}
.article-head ul{
  align-self: center;
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 5%;
    font-size: 1.2em;
}
.article-head li{
  display: flex;
  width: 50%;
  margin-top: 2%;
}
.article-head li::before{
  content: "\2022";
  color: var(--main-color);
  font-weight: bold;
  display: inline-block;
  margin-right: 0.5em;
}

.circle-container{
  width: 50%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.circle{
  padding:35%;
  position: relative;
  border: 30px solid var(--main-color);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
}
img.header-image {
  position: absolute;
  left: 0%;
  bottom: 0%;
  width: 100%;
}
#branding-image{
  width: 125%;
  left: -15%;
}
#web-image{
  position: absolute;
  left: -50%;
  bottom: -10%;
  width: 185%;
}
#social-image{
  left: -10%;
  bottom: -10%;
  width: 120%;
}
#plane-image{
  left: -6%;
  bottom: 10%;
  width: 115%;
}
#strategies-image{
  left: -10%;
  bottom: 10%;
  width: 120%;
  
}
.some-of-our-project,
.work-process,
.be-with-us{
  height: 100%;
  width: 100%;
  display: flex;
  background-size:cover;
  background-position: center;
  position: relative;
}

.show-service .work-process div.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: 5%;
  margin-bottom:5% ;
}
.show-service .work-process div.container h2{
color: var(--main-color);
text-align: center;
font-size: 3em;
margin-bottom: 3%;
}
.show-service .work-process div.container h6{
  color: var(--main-color);
  font-size: 1.5em;
  margin-bottom: 1%;
  }
.show-service .work-process div.container ul{
  width: 65%;
  align-self: center;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  font-size: 1.2em;
  margin-bottom: 5%;
}
#community{
  width: 90%;
  display: flex;
  flex-wrap: nowrap;

}
.show-service .work-process div.container ul li{
  width: 50%;
}
.show-service .work-process div.container ul li::before{
  content: "\2022";
  color: var(--main-color);
  font-weight: bold;
  display: inline-block;
  margin-right: 0.5em;
}
.show-service .work-process div.container p{
    font-size: 1.2em;
    margin-bottom: 5%;
}
.social .work-process div.container{
  min-height: 100vh;
  height: auto;
}
.some-of-our-project  div.container{
  display: flex;
  flex-wrap: wrap;
}
.be-with-us div.container{
  z-index: 2;
  display: flex;
  flex-direction: column;  
  align-items: center;
  margin-top: 10%;
  margin-bottom: 10%;
}
.be-with-us div.container h2{
  text-align: center;
  font-size: 2.8em;;
  margin-bottom: 3%;
  color: var(--sec-color);
  text-shadow: 1px 1px 7px white;
  letter-spacing: 12.5px;
}
.be-with-us div.container p{
  color: #666;
font-weight: bold;
font-size: 1.35em;
margin-bottom: 3%;
text-align: center;
}
.be-with-us div.container a{
  font-size: 1em;
  font-weight: bold;
  text-decoration: none;
  color: white;
  border: 2.5px solid var(--main-color);
  border-radius: 15px;
  padding: 5px 20px 5px 20px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
  letter-spacing: 1.5px;
}
.layer{
  height:100%; 
   width: 100%;
  position: absolute;
  left: 0;
  bottom:2%;
  top: 0;
  right: 0;
  z-index: 1;
}
.layer-index{
  height:110%; 
   width: 100%;
  position: absolute;
  left: 0;
  bottom:2%;
  top: 0;
  right: 0;
  z-index: 1;
}
.mySlides {
  display: none;
}
.slideshow-container{
  margin-top: 5%;
  margin-left: auto;
  margin-right: auto;
}
.slides{

  display: flex;
}
.year-container{
  display: block;
  width:50%;
  text-shadow: 1px 1px 7px white;
  position: relative;

}
.ourStory{
  position: absolute;
  top:-35%;
  left: -22%;
  width: 100%;
  display: block;
  font-size: 2.3em;
  font-weight: bold;

}
.story{
  width: 50%;
  font-size: 1em;
}
.year{
  letter-spacing:0.2em;
  font-size: 7.5em;
  font-weight: bold;
}
/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .text {font-size: 11px}
}
/*  End services Page */
/*  Start Work Page */
.promida-work-section { 
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  position: relative;
}
.promida-work-section div.container{
  display: block;
  margin-top: 10%;
}

.promida-work-section .be-with-us div.container{
  margin-top: 0;
  display: flex;
  height:30vh;

}
/* ... */

